# artifacts-ipv6-sra-scanning

./: .gitignore  .gitmodules  Makefile  README.md  files-tmp  pyproject.toml  requirements.txt
artifacts_ipv6_sra_scanning/: __init__.py  config.py  dataset.py  features.py  plots.py
artifacts_ipv6_sra_scanning/modeling/: predict.py  train.py
artifacts_ipv6_sra_scanning/plot_functions/: 03-worldmap-sra-ips.py  04-icmp-replies-allscans.py  05-tum64_sra_vs_rand.py  06a-routerstability.py  07-upsetplot_sra_all_cut_AS-Number.py  (+12 more)
docs/: mkdocs.yml
ndpi/: config.py  constants.py  convenience.py  init.py
notebooks/: 01-in-depth-analysis.ipynb  01-table.ipynb  01.1-in-depth-analysis.ipynb  02-network-types.ipynb  02-table.ipynb  02.1-network-types.ipynb  02.2-network-types.ipynb  03-table.ipynb  03-worldmap.ipynb  04-stability-sra.ipynb  04-table.ipynb  04.1-stability-sra.ipynb  04.2-stability-sra.ipynb  04.3-stability-sra.ipynb  04.4-stability-sra.ipynb  04.5-stability-sra.ipynb  05-overlap-other-sources.ipynb  05.1-overlap-other-sources.ipynb  05.2-overlap-other-sources.ipynb  06-second-scan.ipynb  06.1-second-scan.ipynb  07-extract-sra-addresses.ipynb  07.1-extract-sra-addresses.ipynb  07.2-extract-sra-addresses.ipynb  07.3-extract-sra-addresses.ipynb  07.4-extract-sra-addresses.ipynb  PolarsAnalysisData.ipynb  StabilityOfRouters.ipynb  SubnetRouterAnycastMeasurements.ipynb  ripe90-analysis-routingloops.ipynb  ripe91-routingloops-update.ipynb
tools/: HOWTOSCAN.md  config-go-tool  config-zmap  log-scan-infos-tmp-print.sh  log-scan-infos.sh  run-measurement.sh
(+11 files in other folders)
